bootstrap on login

--- a/dcrm/Account/templates/Account/create_account.html
+++ b/dcrm/Account/templates/Account/create_account.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="col-md-6" offset-md-3">
+<div class="col-md-6 offset-md-3">
         <h1>Sign Up</h1>
 
         <form method="POST" action="{% url 'home' %}">
@@ -13,13 +13,13 @@
         <div class="row mb-4">
         <div class="col">
             <div data-mdb-input-init class="form-outline">
-            <input type="text" id="form3Example1" class="form-control" />
+            <input type="text" id="form3Example1" class="form-control" required/>
             <label class="form-label" for="form3Example1">First name</label>
             </div>
         </div>
         <div class="col">
             <div data-mdb-input-init class="form-outline">
-            <input type="text" id="form3Example2" class="form-control" />
+            <input type="text" id="form3Example2" class="form-control" required/>
             <label class="form-label" for="form3Example2">Last name</label>
             </div>
         </div>
@@ -27,13 +27,13 @@
 
         <!-- Email input -->
         <div data-mdb-input-init class="form-outline mb-4">
-        <input type="email" id="form3Example3" class="form-control" />
+        <input type="email" id="form3Example3" class="form-control" required/>
         <label class="form-label" for="form3Example3">Email address</label>
         </div>
 
         <!-- Password input -->
         <div data-mdb-input-init class="form-outline mb-4">
-        <input type="password" id="form3Example4" class="form-control" />
+        <input type="password" id="form3Example4" class="form-control" required/>
         <label class="form-label" for="form3Example4">Password</label>
         </div>
 
