--- a/dcrm/Account/templates/Account/login.html
+++ b/dcrm/Account/templates/Account/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="col-md-6" offset-md-3>
+<div class="col-md-6 offset-md-3">
     <h1>Login</h1>
 
     <form method="POST" action="{% url 'home' %}">
@@ -11,13 +11,13 @@
         <form>
             <!-- Email input -->
             <div data-mdb-input-init class="form-outline mb-4">
-              <input type="email" id="form2Example1" class="form-control" />
+              <input type="email" id="form2Example1" class="form-control" required/>
               <label class="form-label" for="form2Example1">Email address</label>
             </div>
 
             <!-- Password input -->
             <div data-mdb-input-init class="form-outline mb-4">
-              <input type="password" id="form2Example2" class="form-control" />
+              <input type="password" id="form2Example2" class="form-control" required/>
               <label class="form-label" for="form2Example2">Password</label>
             </div>
 
