--- a/dcrm/website/templates/website/base.html
+++ b/dcrm/website/templates/website/base.html
@@ -1,10 +1,13 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CRM</title>
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'website/css/styles.css' %}" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
