font awesome bootstrap, google/github

--- a/dcrm/Account/templates/Account/create_account.html
+++ b/dcrm/Account/templates/Account/create_account.html
@@ -11,30 +11,30 @@
     <form>
         <!-- 2 column grid layout with text inputs for the first and last names -->
         <div class="row mb-4">
-        <div class="col">
-            <div data-mdb-input-init class="form-outline">
-            <input type="text" id="form3Example1" class="form-control" required/>
-            <label class="form-label" for="form3Example1">First name</label>
+            <div class="col">
+                <div data-mdb-input-init class="form-outline">
+                    <input type="text" id="form3Example1" class="form-control" required/>
+                    <label class="form-label" for="form3Example1">First name</label>
+                </div>
             </div>
-        </div>
         <div class="col">
             <div data-mdb-input-init class="form-outline">
-            <input type="text" id="form3Example2" class="form-control" required/>
-            <label class="form-label" for="form3Example2">Last name</label>
+                <input type="text" id="form3Example2" class="form-control" required/>
+                <label class="form-label" for="form3Example2">Last name</label>
             </div>
         </div>
         </div>
 
         <!-- Email input -->
         <div data-mdb-input-init class="form-outline mb-4">
-        <input type="email" id="form3Example3" class="form-control" required/>
-        <label class="form-label" for="form3Example3">Email address</label>
+            <input type="email" id="form3Example3" class="form-control" required/>
+            <label class="form-label" for="form3Example3">Email address</label>
         </div>
 
         <!-- Password input -->
         <div data-mdb-input-init class="form-outline mb-4">
-        <input type="password" id="form3Example4" class="form-control" required/>
-        <label class="form-label" for="form3Example4">Password</label>
+            <input type="password" id="form3Example4" class="form-control" required/>
+            <label class="form-label" for="form3Example4">Password</label>
         </div>
 
         <!-- Submit button -->
@@ -42,15 +42,15 @@
 
         <!-- Register buttons -->
         <div class="text-center">
-        <p>or sign up with:</p>
+            <p>or sign up with:</p>
 
-        <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1">
-            <i class="fab fa-google"></i>
-        </button>
+            <button data-mdb-ripple-init type="button" class="btn btn-dark btn-floating mx-1">
+                <i class="fab fa-google"></i>
+            </button>
 
-        <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1">
-            <i class="fab fa-github"></i>
-        </button>
+            <button data-mdb-ripple-init type="button" class="btn btn-dark btn-floating mx-1">
+                <i class="fab fa-github"></i>
+            </button>
         </div>
     </form>
 </div>
